--- a/src/maingamescreen/VGamescreen.fxml
+++ b/src/maingamescreen/VGamescreen.fxml
@@ -1,22 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <?import javafx.geometry.Insets?>
-<VBox spacing="10" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="maingamescreen.CGamescreen" >
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-    <padding><Insets top="25" right="25" bottom="10" left="25"/></padding>
-    <ProgressBar fx:id="pbtimeleft" prefWidth="150.0" progress="0.5" />
+<VBox prefHeight="400.0" prefWidth="350.0" spacing="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="maingamescreen.CGamescreen">
 
-    <Label fx:id="lbscore" text="score" />
-    <Label fx:id="lbrechnung" text="Rechnung"  />
+    <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>
+    <ProgressBar fx:id="pbtimeleft" prefHeight="23.0" prefWidth="316.0" progress="0.5" />
+
+    <Label fx:id="lbscore" prefHeight="21.0" prefWidth="46.0" text="Score:" />
+    <Label fx:id="lbrechnung" text="Rechnung" />
 
 <GridPane hgap="5" vgap="5">
-    <Button fx:id="ans1" text="Option1" GridPane.columnIndex="0" GridPane.rowIndex="0" onAction="#btoptionpressed"/>
-    <Button fx:id="ans2" text="Option2" GridPane.columnIndex="1" GridPane.rowIndex="0"  onAction="#btoptionpressed"/>
-    <Button fx:id="ans3" text="Option3" GridPane.columnIndex="0" GridPane.rowIndex="1"  onAction="#btoptionpressed"/>
-    <Button fx:id="ans4" text="Option4" GridPane.columnIndex="1" GridPane.rowIndex="1"  onAction="#btoptionpressed"/>
+    <Button fx:id="ans1" onAction="#btoptionpressed" prefHeight="150.0" prefWidth="150.0" text="Option1" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+    <Button fx:id="ans2" onAction="#btoptionpressed" prefHeight="150.0" prefWidth="150.0" text="Option2" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+    <Button fx:id="ans3" onAction="#btoptionpressed" prefHeight="150.0" prefWidth="150.0" text="Option3" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+    <Button fx:id="ans4" onAction="#btoptionpressed" prefHeight="150.0" prefWidth="150.0" text="Option4" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <columnConstraints>
+         <ColumnConstraints />
+         <ColumnConstraints />
+      </columnConstraints>
+      <rowConstraints>
+         <RowConstraints />
+         <RowConstraints />
+      </rowConstraints>
 
 </GridPane>
 
