--- a/src/titlescreen/VTitlescreen.fxml
+++ b/src/titlescreen/VTitlescreen.fxml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <?import javafx.geometry.Insets?>
-<VBox xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="titlescreen.CTitlescreen"
-       spacing="10">
-    <padding><Insets top="25" right="25" bottom="10" left="25"/></padding>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-    <Label>Mathability </Label>
-    <HBox spacing="10">
-        <Button text="ADD" onAction="#btGamemode"/>
-        <Button text="SUB" onAction="#btGamemode"/>
+<VBox fillWidth="false" prefHeight="496.0" prefWidth="500.0" spacing="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="titlescreen.CTitlescreen">
+    <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>
+
+    <Label alignment="CENTER" prefHeight="38.0" prefWidth="472.0" text="Mathability">
+      <font>
+         <Font size="25.0" />
+      </font></Label>
+    <HBox prefHeight="120.0" prefWidth="453.0" spacing="10">
+        <Button onAction="#btGamemode" prefHeight="130.0" prefWidth="225.0" text="Addieren" />
+        <Button onAction="#btGamemode" prefHeight="130.0" prefWidth="225.0" text="Subtrahieren" />
     </HBox>
-    <HBox spacing="10">
-        <Button text="MUL" onAction="#btGamemode"/>
-        <Button text="DIV" onAction="#btGamemode"/>
+    <HBox prefHeight="120.0" prefWidth="455.0" spacing="10">
+        <Button onAction="#btGamemode" prefHeight="130.0" prefWidth="225.0" text="Multilpizieren" />
+        <Button onAction="#btGamemode" prefHeight="130.0" prefWidth="225.0" text="Division" />
     </HBox>
-    <Button text="MIX" onAction="#btGamemode"/>
+    <Button onAction="#btGamemode" prefHeight="130.0" prefWidth="460.0" text="MIX" />
 </VBox>
