--- a/src/titlescreen/VTitlescreen.fxml
+++ b/src/titlescreen/VTitlescreen.fxml
@@ -7,13 +7,19 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fillWidth="false" prefHeight="496.0" prefWidth="500.0" spacing="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="titlescreen.CTitlescreen">
+<?import javafx.scene.control.ListView?>
+<HBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="titlescreen.CTitlescreen">
     <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>
 
+
+<VBox fillWidth="false" prefHeight="496.0" prefWidth="500.0" spacing="10">
     <Label alignment="CENTER" prefHeight="38.0" prefWidth="472.0" text="Mathability">
-      <font>
-         <Font size="25.0" />
-      </font></Label>
+
+        <font>
+            <Font size="25.0" />
+        </font></Label>
+
+
     <HBox prefHeight="120.0" prefWidth="453.0" spacing="10">
         <Button onAction="#btGamemode" prefHeight="130.0" prefWidth="225.0" text="Addieren" fx:id="ADD" />
         <Button onAction="#btGamemode" prefHeight="130.0" prefWidth="225.0" text="Subtrahieren"  fx:id="SUB"/>
@@ -23,4 +29,30 @@
         <Button onAction="#btGamemode" prefHeight="130.0" prefWidth="225.0" text="Division"  fx:id="DIV"/>
     </HBox>
     <Button onAction="#btGamemode" prefHeight="130.0" prefWidth="460.0" text="MIX" fx:id="MIX"/>
+
 </VBox>
+
+<VBox>
+    <Label alignment="CENTER" prefHeight="38.0" prefWidth="472.0" text="Highscores">
+
+        <font>
+            <Font size="25.0" />
+        </font></Label>
+    <Label alignment="CENTER" prefHeight="38.0" prefWidth="472.0" text="Typ" fx:id="lbmode">
+
+        <font>
+            <Font size="15.0" />
+        </font></Label>
+
+    <HBox alignment="CENTER">
+        <Button text="links" fx:id="btleft" onAction="#nextOnAction" alignment="CENTER"/>
+        <ListView fx:id="listview"/>
+        <Button text="rechts" fx:id="btright" onAction="#nextOnAction" alignment="CENTER"/>
+    </HBox>
+
+
+</VBox>
+
+
+</HBox>
+
