Code fertig, Design fehlt noch

--- a/src/scorescreen/VScore.fxml
+++ b/src/scorescreen/VScore.fxml
@@ -14,9 +14,9 @@
     <padding><Insets bottom="10" left="25" right="25" top="25"/> </padding>
 
 
-
-    <Text fx:id="txName" text="Name: Fetter Hund"/>
-    <Text fx:id="txScore" text="Score: 10"/>
+    <Text fx:id="txmsg"/>
+    <Text fx:id="txName" text=""/>
+    <Text fx:id="txScore" text=""/>
     <Button onAction="#exitOnAction" text="Zurück"/>
 
 </VBox>
